# GeneticLatticeOptimization

./: .gitmodules  CMakeLists.txt  README.md  habaneroRun.sh  output.txt
src/: 3MFutils.cpp  3MFutils.h  main.cpp
